--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "raouf-dark-Grey-theme",
   "displayName": "Midnight Prism",
   "description": "Midnight Prism is a sleek and modern VS Code theme featuring a balanced palette of dark grey, deep blue, dark red/orange, and muted green tones. Designed to be easy on the eyes during long coding sessions, it blends functionality with a professional look, offering just enough contrast to highlight key elements while maintaining a smooth, visually appealing interface. Ideal for developers who prefer a subtle yet impactful design.",
-  "version": "2.3.1",
+  "version": "2.4.1",
   "publisher": "RaoufBakhti",
   "repository": {
     "type": "git",
@@ -12,8 +12,9 @@
   "keywords": [
     "Midnight Prism",
     "theme",
-    "dark theme",
     "orange theme",
+    "black theme",
+    "dark theme",
     "red theme",
     "green theme",
     "blue theme",
@@ -44,14 +45,19 @@
   "contributes": {
     "themes": [
       {
-        "label": "Dark Grey Theme",
-        "uiTheme": "vs-dark",
-        "path": "./themes/Dark Grey Theme-color-theme.json"
-      },
-      {
         "label": "Dark Blue Vivid Theme",
         "uiTheme": "vs-dark",
         "path": "./themes/Dark Blue Vivid Theme.json"
+      },
+      {
+        "label": "Black Vivid theme",
+        "uiTheme": "vs-dark",
+        "path": "./themes/Black Vivid Theme.json"
+      },
+      {
+        "label": "Dark Grey Theme",
+        "uiTheme": "vs-dark",
+        "path": "./themes/Dark Grey Theme-color-theme.json"
       },
       {
         "label": "Dark Orange Vivid Theme",
