--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "raouf-dark-Grey-theme",
   "displayName": "Midnight Prism",
   "description": "Midnight Prism is a sleek and modern VS Code theme featuring a balanced palette of dark grey, deep blue, dark red/orange, and muted green tones. Designed to be easy on the eyes during long coding sessions, it blends functionality with a professional look, offering just enough contrast to highlight key elements while maintaining a smooth, visually appealing interface. Ideal for developers who prefer a subtle yet impactful design.",
-  "version": "2.4.2",
+  "version": "2.5.2",
   "publisher": "RaoufBakhti",
   "repository": {
     "type": "git",
     "url": "https://github.com/Raoufbaa/raouf-dark-Grey-theme"
   },
   "icon": "icon.png",
+  "license": "MIT",
   "keywords": [
     "Midnight Prism",
     "theme",
@@ -37,7 +38,7 @@
     "new version"
   ],
   "engines": {
-    "vscode": "^1.90.0"
+    "vscode": "^1.0.0"
   },
   "categories": [
     "Themes"
