--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "raouf-dark-Grey-theme",
   "displayName": "Midnight Prism",
   "description": "Midnight Prism is a sleek and modern VS Code theme featuring a balanced palette of dark grey, deep blue, dark red/orange, and muted green tones. Designed to be easy on the eyes during long coding sessions, it blends functionality with a professional look, offering just enough contrast to highlight key elements while maintaining a smooth, visually appealing interface. Ideal for developers who prefer a subtle yet impactful design.",
-  "version": "2.5.6",
+  "version": "2.6.2",
   "publisher": "RaoufBakhti",
   "repository": {
     "type": "git",
@@ -12,6 +12,9 @@
   "license": "MIT",
   "keywords": [
     "Midnight Prism",
+    "ubuntu theme",
+    "ubuntu",
+    "ubuntu dark",
     "theme",
     "orange theme",
     "black theme",
@@ -31,6 +34,9 @@
     "good viabrant Color theme",
     "nice theme",
     "best theme",
+    "cool theme",
+    "vs code theme",
+    "visual code theme",
     "ever",
     "best theme ever",
     "black theme ",
@@ -66,9 +72,14 @@
         "path": "./themes/Dark Grey Theme-color-theme.json"
       },
       {
-        "label": "Black Vivid theme",
+        "label": "Black Vivid Theme",
         "uiTheme": "vs-dark",
         "path": "./themes/Black Vivid Theme.json"
+      },
+      {
+        "label": "Dark Vivid Ubuntu Theme",
+        "uiTheme": "vs-dark",
+        "path": "./themes/Dark Ubuntu Style.json"
       }
     ]
   }
