--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "raouf-dark-Grey-theme",
+  "name": "raouf-dark-grey-theme",
   "displayName": "Midnight Prism",
   "description": "Midnight Prism is a sleek and modern VS Code theme featuring a balanced palette of dark grey, deep blue, dark red/orange, and muted green tones. Designed to be easy on the eyes during long coding sessions, it blends functionality with a professional look, offering just enough contrast to highlight key elements while maintaining a smooth, visually appealing interface. Ideal for developers who prefer a subtle yet impactful design.",
-  "version": "2.8.1",
+  "version": "2.8.5",
   "publisher": "RaoufBakhti",
   "repository": {
     "type": "git",
@@ -12,6 +12,12 @@
   "license": "MIT",
   "keywords": [
     "Midnight Prism",
+    "Midnight Abyss Theme",
+    "Midnight Deep Ocean Theme",
+    "Midnight Forest Theme",
+    "Midnight Graphite Theme",
+    "Midnight Sunset Theme",
+    "Midnight Ubuntu Theme",
     "ubuntu theme",
     "ubuntu",
     "ubuntu dark",
@@ -31,7 +37,7 @@
     "raoufbakhti",
     "Raouf Bakhti",
     "RaoufBakhti",
-    "good viabrant Color theme",
+    "good vibrant color theme",
     "nice theme",
     "best theme",
     "cool theme",
@@ -52,27 +58,27 @@
   "contributes": {
     "themes": [
       {
-        "label": "Black Vivid Theme",
+        "label": "Midnight Abyss Theme",
         "uiTheme": "vs-dark",
         "path": "./themes/Black Vivid Theme.json"
       },
       {
-        "label": "Dark Blue Vivid Theme",
+        "label": "Midnight Deep Ocean Theme",
         "uiTheme": "vs-dark",
         "path": "./themes/Dark Blue Vivid Theme.json"
       },
       {
-        "label": "Dark Green Vivid Theme",
+        "label": "Midnight Forest Theme",
         "uiTheme": "vs-dark",
         "path": "./themes/Dark Green Vivid theme.json"
       },
       {
-        "label": "Dark Orange Vivid Theme",
+        "label": "Midnight Sunset Theme",
         "uiTheme": "vs-dark",
         "path": "./themes/Dark Orange Vivid Theme.json"
       },
       {
-        "label": "Dark Grey Vivid Theme",
+        "label": "Midnight Graphite Theme",
         "uiTheme": "vs-dark",
         "path": "./themes/Dark Grey Theme-color-theme.json"
       },
@@ -82,7 +88,7 @@
         "path": "./themes/Midnight Eclipse.json"
       },
       {
-        "label": "Dark Vivid Ubuntu Theme",
+        "label": "Midnight Ubuntu Theme",
         "uiTheme": "vs-dark",
         "path": "./themes/Dark Ubuntu Style.json"
       }
